--- a/src/main/resources/templates/board/boardView.html
+++ b/src/main/resources/templates/board/boardView.html
@@ -2,7 +2,7 @@
 <html lang="ko" xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout" layout:decorate="~{layout/basic}">
 
 <th:block layout:fragment="script">
-    <script type="text/javascript"> 
+	<script type="text/javascript"> 
     	var pages = getParameterByName("page");
     	var clickCommentCno;
     	
@@ -31,7 +31,7 @@
         	return true;
         }
         
-        function cancelComment(part) {
+        function cancelCommentForm(part) {
         	document.getElementById(part + "commentForm").style.display = "none";
         	document.getElementById(part + "cTextArea").value = "";
         }
@@ -74,7 +74,7 @@
         	    success : function(data){
         	    	if(data == true) {
         	        	alert("댓글 등록 성공");
-        	        	cancelComment(part);
+        	        	cancelCommentForm(part);
         	        	location.href = location.href;
         	    	}
         	    	else
@@ -115,6 +115,63 @@
         function showCommentByCommentForm(cno) {
         	clickCommentCno = cno;
         	document.getElementById("ccommentForm").style.display = "block";
+        }
+        
+        function showModifyCommentForm(cno) {
+        	clickCommentCno = cno;
+        	document.getElementById("light").style.display = "block";
+        	document.getElementById("fade").style.display = "block";
+        	document.getElementById("mcommentForm").style.display = "block";
+        }
+        
+        function cancelUpdateCommentForm() {
+        	document.getElementById("light").style.display = "none";
+        	document.getElementById("fade").style.display = "none";
+        	cancelCommentForm("m");
+        }
+        
+        function updateComment(cno) {
+        	var boardNumber = document.getElementsByName("boardNumber")[0].id;
+        	var sid = $("#mcsid");
+        	var nickname = $("#mcnickname");
+        	var content = $("#mcTextArea");
+        	
+        	if(sid.val() == "") {
+        		alert("학번 입력");
+        		sid.focus();
+        		return false;
+        	}
+        	if(nickname.val() == "") {
+        		alert("닉네임 입력");
+        		nickname.focus();
+        		return false;
+        	}
+        	if(content.val() == "") {
+        		alert("내용 입력");
+        		content.focus();
+        		return false;
+        	}
+        	
+        	$.ajax({
+        	    type: "PUT",
+        	    url : "/boardComment/updateBoardComment",
+        	    data : {
+        	    	bno : boardNumber,
+        	    	cno : clickCommentCno,
+        	    	content : content.val()
+        	    },
+        	    success : function(data){
+        	    	if(data == true) {
+        	        	alert("댓글 수정 성공");
+        	        	location.href = location.href;
+        	    	}
+        	    	else
+        	    		alert("댓글 수정 실패");
+        	    },error : function(){
+        	        alert("Error");
+        	        return false;
+        	    }
+        	});
         }
     </script>
 </th:block>
@@ -168,7 +225,7 @@
 		<br>
 		<div>
 			<button type="button" onClick="return registerComment('');" class="btn btn-primary waves-effect waves-light">등록</button>
-			<button type="button" onClick="cancelComment('');" class="btn btn-primary waves-effect waves-light">취소</button>
+			<button type="button" onClick="cancelCommentForm('');" class="btn btn-primary waves-effect waves-light">취소</button>
 		</div>
     </div><br><br>
 
@@ -197,13 +254,16 @@
                    			</a>
                    			<div class="dropdown-menu text-center">
                    				<a th:onClick="|showCommentByCommentForm(${boardComment.getCno()});|" class="dropdown-item" style="cursor:pointer; color:#A566FF">댓글쓰기<br></a>
-                       			<a th:if="${userSid} == ${boardComment.getStudentForeignkey().getSid()}" class="dropdown-item" style="cursor:pointer; color:#47C83E">수정<br></a>
+                       			<a th:onClick="|showModifyCommentForm(${boardComment.getCno()});|" th:if="${userSid} == ${boardComment.getStudentForeignkey().getSid()}" class="dropdown-item" style="cursor:pointer; color:#47C83E">수정<br></a>
                        			<a th:id="bc+${boardComment.getCno()}" th:onClick="|return deleteComment(${boardComment.getCno()});|" th:if="${userSid} == ${boardComment.getStudentForeignkey().getSid()}" class="dropdown-item" style="cursor:pointer; color:red">삭제</a>
                    			</div>
                			</li>
            			</ul>
         		</div>
        		</td>
+        <tr>
+        <tr th:each="boardComment :${boardCommentList}" th:if="${boardComment.getCheck_delete()} == 'F'" >
+        	
         </tr>
         </tbody>
     </table>
@@ -242,8 +302,8 @@
     	<div style="font-size:10pt; text-align:left; margin-left:5%; margin-top:10px">
     		<b>&lt;대댓글 작성&gt;</b>
     		<div style="float:right; font-size:10pt; text-align:left; margin-right:5%;">
-				학번 <br><br><input type="text" th:value="${userSid}" id = "ccsid" readonly/> <br><br>
-				닉네임<br><br><input type="text" th:value="${userNickname}" id = "ccnickname" readonly/>
+				학번 <br><br><input type="text" th:value="${userSid}" id = "mcsid" readonly/> <br><br>
+				닉네임<br><br><input type="text" th:value="${userNickname}" id = "mcnickname" readonly/>
 			</div>
     		<br>
     		<textarea id = "ccTextArea" rows = "5" cols = "50" placeholder = "이곳에 댓글 입력" 
@@ -253,10 +313,31 @@
 		<br>
 		<div>
 			<button type="button" onClick="return registerComment('c');" class="btn btn-primary waves-effect waves-light">등록</button>
-			<button type="button" onClick="cancelComment('c');" class="btn btn-primary waves-effect waves-light">취소</button>
+			<button type="button" onClick="cancelCommentForm('c');" class="btn btn-primary waves-effect waves-light">취소</button>
 		</div>
     </div>
-
     <!-- /.card-content -->
+     <div id="light" class="white_content">
+     	<div id="mcommentForm" style="margin-left:15%; margin-top:20%; width:600px; height:180px; border:1px solid blue; 
+    	line-height:70%; text-align:center; display:none">
+    	<div style="font-size:10pt; text-align:left; margin-left:5%; margin-top:10px">
+    		<b>&lt;댓글 수정&gt;</b>
+    		<div style="float:right; font-size:10pt; text-align:left; margin-right:5%;">
+				학번 <br><br><input type="text" th:value="${userSid}" id = "csid" name = "sid" readonly/> <br><br>
+				닉네임<br><br><input type="text" th:value="${userNickname}" id = "cnickname" name = "nickname" readonly/>
+			</div>
+    		<br>
+    		<textarea id = "mcTextArea" rows = "5" cols = "50" placeholder = "이곳에 수정할 댓글 입력" 
+    			maxlength = 200 style="font-size:12px; margin-top:10px;"></textarea>
+    		<br><br>(200자 내외)
+		</div>
+		<br>
+		<div>
+			<button type="button" onClick="return updateComment()" class="btn btn-primary waves-effect waves-light">수정</button>
+			<button type="button" onClick="cancelUpdateCommentForm()" class="btn btn-primary waves-effect waves-light">취소</button>
+		</div>
+    	</div>
+     </div>
+     <div id="fade" class="black_overlay"></div>
 </th:block>
 </html>
