--- a/src/main/resources/templates/board/boardView.html
+++ b/src/main/resources/templates/board/boardView.html
@@ -184,7 +184,7 @@
 </th:block>
 
 <th:block layout:fragment="title">
-    <title>Board Insert</title>
+    <title>Board View</title>
 </th:block>
 
 <th:block layout:fragment="content">
