--- a/src/main/resources/templates/studentInfo/studentInfo.html
+++ b/src/main/resources/templates/studentInfo/studentInfo.html
@@ -194,6 +194,7 @@
 				<button th:if="${userSid} != null" type="button" onClick="location.href='/logout'" class="btn btn-primary waves-effect waves-light">로그아웃</button>
 				<button th:unless="${userSid} != null" type="button" onClick="location.href='/login'" class="btn btn-primary waves-effect waves-light">로그인</button>
 				<button type="button" onClick="location.href='/board/boardList?boardtype=자유게시판'" class="btn btn-primary waves-effect waves-light">게시판</button>
+				<button type="button" onClick="location.href='/matching/matchingList?boardtype=심부름'" class="btn btn-primary waves-effect waves-light">매칭게시판</button>
 			</div>
 		</div>
 		<!-- /.card-content -->
