--- a/src/main/resources/templates/board/boardList.html
+++ b/src/main/resources/templates/board/boardList.html
@@ -30,7 +30,7 @@
 <th:block layout:fragment="nav-title">
     <div class="fixed-navbar">
         <div class="pull-left">
-            <h1 class="page-title">Board List</h1>
+            <h1 class="page-title">Board list</h1>
         </div>
     </div>
 </th:block>
@@ -41,7 +41,7 @@
             <ul class="nav flex-column">
                 <li class="dropdown dropright">
                     <a class="nav-link" href="#" id="navbarDroprightMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" tabindex="-1" aria-disabled="true">
-                    	 게시판
+                        게시판
                     </a>
                     <div class="dropdown-menu text-center">
                         <a class="dropdown-item" href="/board/boardList?boardtype=자유게시판">자유게시판</a><br>
@@ -49,11 +49,13 @@
                         <a class="dropdown-item" href="/board/boardList?boardtype=게임게시판">게임게시판</a>
                     </div>
                 </li>
+
+
             </ul>
         </div>
         <br>
     </div>
-    <div><h2 style="color:Blue">Board List</h2></div>
+    <div><h2 style="color:Blue">Board list</h2></div>
     <br><br>
 
     <table class="table table-horizontal table-bordered">
@@ -62,7 +64,7 @@
             <th>게시글번호</th>
             <th>제목</th>
             <th>작성자</th>
-            <th>등록일</th>
+            <th>최종수정일</th>
             <th>조회수</th>
             <th>좋아요</th>
         </tr>
