--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -11,6 +11,8 @@
 
 		<link rel="stylesheet" th:href="@{/css/style.css}" />
 		<link rel="stylesheet" th:href="@{/plugin/mCustomScrollbar/jquery.mCustomScrollbar.min.css}" />
+		<link th:href="@{http://cdnjs.cloudflare.com/ajax/libs/summernote/0.8.2/summernote.css}" rel="stylesheet">
+
 
 		<th:block layout:fragment="add-css"></th:block>
 	</header>
