--- a/src/main/resources/templates/fragments/body.html
+++ b/src/main/resources/templates/fragments/body.html
@@ -42,11 +42,10 @@
 			<!-- /.main-content -->
 		</div>
 		<!-- /#wrapper -->
-
+		<script th:src="@{/ckeditor/ckeditor.js}"></script>
 		<script th:src="@{/scripts/jquery.min.js}"></script>
 		<script th:src="@{/plugin/bootstrap/js/bootstrap.min.js}"></script>
 		<script th:src="@{/plugin/mCustomScrollbar/jquery.mCustomScrollbar.concat.min.js}"></script>
-
 		<script th:src="@{/scripts/main.js}"></script>
 		<script th:src="@{/scripts/common.js}"></script>
 
