--- a/src/main/resources/templates/studentInfo/studentRegistration.html
+++ b/src/main/resources/templates/studentInfo/studentRegistration.html
@@ -16,7 +16,7 @@
    	//alert(queryString);
     	$.ajax({
     	    type: "POST",
-    	    url : "/studentInfo/studentRegistration",
+    	    url : "/studentRegistration",
     	    /*data : { sid : $("#sid").val(),
     	             department : $("#department").val(),
     	             syear : $("#syear").val(),
@@ -31,7 +31,7 @@
     	    success : function(data){
     	    	if(data == true) {
     	        	alert("등록 성공, 재로그인 해주세요.");
-    	        	location.href='/studentInfo/studentInfo';
+    	        	location.href='/studentInfo/studentInfoTest';
     	    	}
     	    	else
     	    		alert("등록 실패");
@@ -99,7 +99,7 @@
 
 				<div>
 					<button type="submit" class="btn btn-primary waves-effect waves-light">등록</button>
-					<button type="button" onClick="location.href='/studentInfo/studentInfo'" class="btn btn-primary waves-effect waves-light">이전</button>
+					<button type="button" onClick="location.href='/studentInfo/studentInfoTest'" class="btn btn-primary waves-effect waves-light">이전</button>
 				</div>
 			</form>
 		</div>
