--- a/src/main/resources/templates/board/boardInsert.html
+++ b/src/main/resources/templates/board/boardInsert.html
@@ -48,7 +48,7 @@
         </form>
 
         <div>
-            <button type="button" class="btn btn-primary waves-effect waves-light" onclick="dataSend()">등록</button>
+            <button type="button" class="btn btn-primary waves-effect waves-light" onClick="dataSend()">등록</button>
             <button type="button" onClick="history.back(-1);" class="btn btn-primary waves-effect waves-light">이전</button>
         </div>
 
@@ -57,6 +57,9 @@
 </th:block>
 <th:block layout:fragment="script">
     <script type="text/javascript">
+    	//var boardTypeName = getParameterByName("boardtype");
+    	//$("#" + boardTypeName).attr("selected","selected");
+    	
         function getParameterByName(name) {
             name = name.replace(/[\[]/, "\\[").replace(/[\]]/, "\\]");
             var regex = new RegExp("[\\?&]" + name + "=([^&#]*)"),
@@ -65,7 +68,6 @@
         }
 
         function dataSend() {
-            var gender = $(":input:radio[name=gen]:checked").val();
             var content=$('#content').val(CKEDITOR.instances.content.getData());
             let queryString = $('#infoForm').serialize();
             var boardtype = $('#boardtype').val();
@@ -97,12 +99,7 @@
             return false;
         }
     </script>
-    <script th:inline="javascript">
-        var a=getParameterByName("boardtype");
-        $("#"+a).attr("selected","selected");
+    <script th:src="@{/scripts/ckeditor.js}">
     </script>
-
-<script th:src="@{/scripts/ckeditor.js}">
-</script>
 </th:block>
 </html>
