--- a/src/main/resources/templates/board/boardList.html
+++ b/src/main/resources/templates/board/boardList.html
@@ -3,20 +3,31 @@
 
 <th:block layout:fragment="script">
     <script th:inline="javascript">
+        var pages = getParameterByName("page");
+        if(pages == ""){
+            pages=0;
+        }
+        $("#page"+pages).attr("class","active");
         function getParameterByName(name) {
             name = name.replace(/[\[]/, "\\[").replace(/[\]]/, "\\]");
             var regex = new RegExp("[\\?&]" + name + "=([^&#]*)"),
                 results = regex.exec(location.search);
             return results == null ? "" : decodeURIComponent(results[1].replace(/\+/g, " "));
         }
+        function pageMove(param) {
+            var boardtype=getParameterByName("boardtype");
+            var pageNum = parseInt(getParameterByName("page"));
+            var nextOrPrev;
+            if(isNaN(pageNum)) pageNum = 0;
+            nextOrPrev = (param == "next") ? 1 : -1;
 
-        var pages = getParameterByName("page");
-        if(pages == "") {
-            pages = 0;
+            if(pageNum + nextOrPrev < 0) return false;
+            else if(pageNum + nextOrPrev > [[${board.getTotalPages()}]] - 1) return false;
+
+            location.href = "/board/boardList/?boardtype="+boardtype+"page=" + (pageNum + nextOrPrev);
+            return true;
         }
-        $("#page"+pages).attr("class","active");
         var boardtype=getParameterByName("boardtype");
-        
         function InsertBoard() {
             location.href = "/board/boardInsert?boardtype=" +boardtype;
         }
@@ -30,7 +41,7 @@
 <th:block layout:fragment="nav-title">
     <div class="fixed-navbar">
         <div class="pull-left">
-            <h1 class="page-title">Board list</h1>
+            <h1 class="page-title">Board List</h1>
         </div>
     </div>
 </th:block>
@@ -41,7 +52,7 @@
             <ul class="nav flex-column">
                 <li class="dropdown dropright">
                     <a class="nav-link" href="#" id="navbarDroprightMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" tabindex="-1" aria-disabled="true">
-                        게시판
+                    	 게시판
                     </a>
                     <div class="dropdown-menu text-center">
                         <a class="dropdown-item" href="/board/boardList?boardtype=자유게시판">자유게시판</a><br>
@@ -49,13 +60,11 @@
                         <a class="dropdown-item" href="/board/boardList?boardtype=게임게시판">게임게시판</a>
                     </div>
                 </li>
-
-
             </ul>
         </div>
         <br>
     </div>
-    <div><h2 style="color:Blue">Board list</h2></div>
+    <div><h2 style="color:Blue">Board List</h2></div>
     <br><br>
 
     <table class="table table-horizontal table-bordered">
@@ -64,7 +73,7 @@
             <th>게시글번호</th>
             <th>제목</th>
             <th>작성자</th>
-            <th>최종수정일</th>
+            <th>등록일</th>
             <th>조회수</th>
             <th>좋아요</th>
         </tr>
@@ -80,15 +89,24 @@
         </tr>
         </tbody>
     </table>
-
     <ul class="pagination">
         <li id="pagefirst">
             <a th:href="'?'+page+'='+0+'&'+boardtype+'='+${boardType}">
-                <span>«</span>
+            <span>«</span>
             </a>
         </li>
-        <li th:if="${board.getTotalPages()}>0" th:id="page+${num}" th:each="num: ${#numbers.sequence(0,board.getTotalPages()-1)}">
-            <a th:href="'?'+page+'='+${num}+'&'+boardtype+'='+${boardType}" th:text="${num+1}"></a>
+        <li style="cursor:pointer" id="pagePrev">
+            <a th:onClick="|return pageMove('prev');|">
+                <span><</span>
+            </a>
+        </li>
+        <li style="cursor:pointer" th:if="${board.getTotalPages()}>0" th:id="page+${num}" th:each="num: ${#numbers.sequence(0,board.getTotalPages()-1)}">
+            <a th:href="'?'+page+'='+${num}" th:text="${num+1}"></a>
+        </li>
+        <li id="pageNext">
+            <a style="cursor:pointer" th:onClick="|return pageMove('next');|">
+                <span>></span>
+            </a>
         </li>
         <li>
             <a th:if="${board.getTotalPages()}>0" th:href="'?'+page+'='+${board.getTotalPages()-1}+'&'+boardtype+'='+${boardType}">
@@ -99,7 +117,6 @@
             </a>
         </li>
     </ul>
-
     <div style="float: right">
         <button type="button" onClick="location.href='/studentInfo/studentInfo'" class="btn btn-primary waves-effect waves-light">학생 정보</button>
         <button th:if="${userSid} != null" type="button" onClick="InsertBoard()" class="btn btn-primary waves-effect waves-light">등록</button>
