--- a/src/main/resources/templates/board/boardUpdate.html
+++ b/src/main/resources/templates/board/boardUpdate.html
@@ -8,7 +8,7 @@
 </th:block>
 
 <th:block layout:fragment="content">
-    <div><h2 style="color:green">Board Insert</h2></div>
+    <div><h2 style="color:green">Board Update</h2></div>
     <br><br>
     <div class="card-content">
         <form id="infoForm" name="infoForm">
