--- a/src/main/resources/templates/board/boardList.html
+++ b/src/main/resources/templates/board/boardList.html
@@ -4,16 +4,20 @@
 <th:block layout:fragment="script">
     <script th:inline="javascript">
         var pages = getParameterByName("page");
+        var boardtype=getParameterByName("boardtype");
+        
         if(pages == ""){
             pages=0;
         }
         $("#page"+pages).attr("class","active");
+        
         function getParameterByName(name) {
             name = name.replace(/[\[]/, "\\[").replace(/[\]]/, "\\]");
             var regex = new RegExp("[\\?&]" + name + "=([^&#]*)"),
                 results = regex.exec(location.search);
             return results == null ? "" : decodeURIComponent(results[1].replace(/\+/g, " "));
         }
+        
         function pageMove(param) {
             var boardtype=getParameterByName("boardtype");
             var pageNum = parseInt(getParameterByName("page"));
@@ -27,7 +31,7 @@
             location.href = "/board/boardList/?boardtype="+boardtype+"page=" + (pageNum + nextOrPrev);
             return true;
         }
-        var boardtype=getParameterByName("boardtype");
+        
         function InsertBoard() {
             location.href = "/board/boardInsert?boardtype=" +boardtype;
         }
@@ -65,6 +69,7 @@
         <br>
     </div>
     <div><h2 style="color:Blue">Board List</h2></div>
+    <div><h4 style="color:red" th:text=${boardType}></h4></div>
     <br><br>
 
     <table class="table table-horizontal table-bordered">
